# IVS-calculator

./: .gitignore  CMakeLists.txt  README.md  celkové_hodnotenie.txt  hodnoceni.txt  skutocnost.txt
plan/: xrajko00_xphanj00_xbuban00_plan.txt
src/: CMakeLists.txt  Doxyfile  Makefile  calc.cpp  calc.h  calc.ui  installer.sh  main.cpp  profiling.cpp  setup.sh
src/install/: install.sh  ivs-calc_1.0-1_Linux.deb
src/install/ivs-calc_1.0-1_Linux/DEBIAN/: control  postinst
src/install/ivs-calc_1.0-1_Linux/usr/share/applications/: ivs-calc.desktop
src/lib/: cmath.cpp  cmath.h  math.cpp  math.h
src/profiling/: 1000_numbers  100_numbers  10_numbers  CMakeLists.txt  stddev.cpp
src/tests/: math_test.cpp
tests/: CMakeLists.txt  math_test.cpp
